appId: com.example.app
---
- tapOn:
    text: "maybe-later"
    label: "Scroll to find the maybe-later button"

- inputText:
    text: ${username}

- assertVisible:
    text: "Hello ${username}" 